Fixed navigation stick issue + double scroll for mobile #21

--- a/client/src/DashBoard/Sidebar.scss
+++ b/client/src/DashBoard/Sidebar.scss
@@ -5,6 +5,10 @@
   //   width: 100%;
   // }
   padding: 8px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 
   .nav-link{
     color: white !important;
